# mini_task

./: Dockerfile  README.md  README.rst  docker-compose.yaml  pyproject.toml
mini_task/: main.py  setup.txt
tests/: test_mini_task.py
