[tool.poetry]
name = "mini-task"
version = "0.1.0"
description = ""
authors = ["s10dev <s10.dev@yandex.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
